--- a/_posts/2019-05-02-bit.markdown
+++ b/_posts/2019-05-02-bit.markdown
@@ -12,8 +12,9 @@ tags: ["进制", "编码", "精度", "javascript"]
 
 ## 基础
 
-### 16进制
+### 16 进制
 
+todo
 
 ### 进制转换
 
@@ -254,11 +255,35 @@ todo（查看下源码）
 | 按位非     | ~ a     | ~0101 => 1010                                          |
 | 左移       | a << b  | 0101 << 1 => 1010                                      |
 | 右移       | a >> b  | 0101 >> 1 => 0010;1101 >> 1 => 1110;最左边由符号位补充 |
-| 无符号右移 | a >>> b | 0101 >>> 1 => 0010;1101 >>> 1 => 0110;最左边由 0 补充    |
-
-### 原码，反码，补码
+| 无符号右移 | a >>> b | 0101 >>> 1 => 0010;1101 >>> 1 => 0110;最左边由 0 补充  |
 
 ### 应用
+
+- 权限设计
+
+```js
+p_no = 1
+p_a = 1 << 1
+p_b = 1 << 2
+p_c = 1 << 3
+p_d = 1 << 4
+add() {
+  this.current_p |= permission
+},
+remP() {
+  this.current_p &= ~permission
+},
+has() {
+  return (this.current_p & permission) != 0
+}
+```
+
+<p class="codepen" data-height="300" data-default-tab="js" data-slug-hash="jOpRQOV" data-user="tggcs" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/tggcs/pen/jOpRQOV">
+  bitwise-auth</a> by 唐鸽 (<a href="https://codepen.io/tggcs">@tggcs</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
 ### 参考
 
